Application now changes visibility during 20 minute timer. Added sound effects to alert user. Issue resetting display message and timer display resolved.

--- a/OneDrive/Desktop/20-20-20Rule/20-20-20-stylesheet.css
+++ b/OneDrive/Desktop/20-20-20Rule/20-20-20-stylesheet.css
@@ -3,6 +3,7 @@ html{
 }
 /*Welcome page styles*/
 .grid{
+    visibility: visible;
     display: grid;
     grid-template-areas: 
         'welcome welcome welcome'
